// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Correctly - No Props 1`] = `
<div
  class="up-down-arrow"
>
  <svg
    class="inline-block transition-all duration-300 text-main-900 h-7/2 -mt-1 text-opacity-75"
    fill="none"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1.5"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M0 0h24v24H0z"
      stroke="none"
    />
     
    <line
      x1="12"
      x2="12"
      y1="5"
      y2="19"
    />
     
    <line
      x1="16"
      x2="12"
      y1="9"
      y2="5"
    />
     
    <line
      x1="8"
      x2="12"
      y1="9"
      y2="5"
    />
  </svg>
   
  <svg
    class="inline-block -ml-2 transition-all duration-300 text-main-900 h-7/2 -mt-1 text-opacity-75"
    fill="none"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1.5"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M0 0h24v24H0z"
      stroke="none"
    />
     
    <line
      x1="12"
      x2="12"
      y1="5"
      y2="19"
    />
     
    <line
      x1="16"
      x2="12"
      y1="15"
      y2="19"
    />
     
    <line
      x1="8"
      x2="12"
      y1="15"
      y2="19"
    />
  </svg>
</div>
`;

exports[`Renders Correctly - Passed with Props 1`] = `
<div
  class="up-down-arrow"
>
  <svg
    class="inline-block transition-all duration-300 text-main-900 h-2 -mt-2"
    fill="none"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1.5"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M0 0h24v24H0z"
      stroke="none"
    />
     
    <line
      x1="12"
      x2="12"
      y1="5"
      y2="19"
    />
     
    <line
      x1="16"
      x2="12"
      y1="9"
      y2="5"
    />
     
    <line
      x1="8"
      x2="12"
      y1="9"
      y2="5"
    />
  </svg>
   
  <svg
    class="inline-block -ml-2 transition-all duration-300 text-main-900 h-5 -mt-1"
    fill="none"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1.5"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M0 0h24v24H0z"
      stroke="none"
    />
     
    <line
      x1="12"
      x2="12"
      y1="5"
      y2="19"
    />
     
    <line
      x1="16"
      x2="12"
      y1="15"
      y2="19"
    />
     
    <line
      x1="8"
      x2="12"
      y1="15"
      y2="19"
    />
  </svg>
</div>
`;
